gcc/testsuite/rust/rustc/ui/associated-item/associated-item-duplicate-names-2.rs
struct Foo;

impl Foo {
    const bar: bool = true;
    fn bar() {} // { dg-error ".E0201." "" { target *-*-* } }
}

fn main() {}

